style(sidebar): fix clipping on low height

--- a/src/components/ComponentStyles/header.sass
+++ b/src/components/ComponentStyles/header.sass
@@ -194,6 +194,37 @@
 		&.menu-open
 			left: 0
 
+@media (max-height: 1200px)
+	.header-left
+		.hl-top
+			padding: 20px 20px 0
+			.img
+				width: 96px
+				height: 96px
+			h5
+				margin: 18px 0 0
+				font-size: 13px
+				letter-spacing: 5px
+		.nav-menu
+			padding-top: 20px
+			padding-bottom: 20px
+			.nav-link
+				padding: 10px 24px
+				font-size: 13px
+				letter-spacing: 2px
+				line-height: 16px
+
+@media (max-height: 760px)
+	.header-left
+		.nav-menu
+			padding-top: 40px
+			padding-bottom: 40px
+			.nav-link
+				padding: 8px 20px
+				font-size: 12px
+				letter-spacing: 1px
+				line-height: 15px
+
 #pp-nav
 	margin-right: 50px
 	@include down-md
